# fdb

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md  contributors.txt
.github/: copilot-instructions.md
docs/ai/: project-context.md
examples/: CMakeLists.txt  simple.c  simple.cpp
include/fdb/: fdb.h  fdb_types.h
scripts/: build_install_cpputest.sh
src/: CMakeLists.txt
src/common/: log.c
src/db/: db.c  db_serialize.c
src/include/: fdb_hexdump.h  fdb_log.h  fdb_private.h  fdb_storage.h
src/storage/: mem_backend.c  mem_backend.h
src/txn/: txn.c
tests/: CMakeLists.txt  RunAllTests.cpp  fdbInitTests.c  fdbInitTests.cpp  fdbOpsTests.c  fdbOpsTests.cpp  fdbSerializeTests.c  fdbSerializeTests.cpp  fdbTests.cpp  fdbTxnTests.c  fdbTxnTests.cpp
